Fixed alert label alignment

--- a/public/ng/app/scss/modules/_overrides.scss
+++ b/public/ng/app/scss/modules/_overrides.scss
@@ -13,6 +13,10 @@ ion-nav-bar.bar.bar-royal, .nav-title-slide-ios7, .bar .bar-header .nav-bar {
   padding-top:    13px !important;
 }
 
+label.item.item-input.item-select {
+  padding-bottom: 13px;
+}
+
 .slider.no-overflow {
   padding-bottom: 25px;
 }
